fixed chat time overflow

--- a/src/app/chats/chats.component.scss
+++ b/src/app/chats/chats.component.scss
@@ -28,8 +28,12 @@
   display: flex;
   flex-direction: column;
   margin-left: 15px;
+  flex: 1;
 }
-
+.content > .chat-title {
+  display: flex;
+  justify-content: space-between;
+}
 .chat-name {
   font-size: 1.2rem;
 }
